--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,7 @@ body {
     background-color: #d9dcd6;
 }
 
+/* Header styling */
 header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -47,6 +48,7 @@ p {
     font-size: 16px;
 }
 
+/* Banner Styling */
 .hero {
     height: 800px;
     width: 100%;
@@ -56,22 +58,7 @@ p {
     background-position: center;
 }
 
-.float-left {
-    float: left;
-    margin-right: 25px;
-}
-
-.float-right {
-    float: right;
-    margin-left: 25px;
-}
-
-main {
-    width: 75%;
-    display: inline-block;
-    margin-left: 20px;
-}
-
+/* Sidebar styling */
 aside {
     margin-right: 20px;
     padding: 20px;
@@ -99,6 +86,23 @@ aside img {
     max-width: 150px;
 }
 
+/* Main styling */
+.float-left {
+    float: left;
+    margin-right: 25px;
+}
+
+.float-right {
+    float: right;
+    margin-left: 25px;
+}
+
+main {
+    width: 75%;
+    display: inline-block;
+    margin-left: 20px;
+}
+
 main section {
     margin-bottom: 20px;
     padding: 50px;
@@ -117,6 +121,7 @@ main section h2 {
     font-size: 36px;
 }
 
+/* Footer styling */
 footer {
     padding: 30px;
     clear: both;
